[package]
name = "mbedtls"
version = "0.4.0"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
edition = "2018"
license = "Apache-2.0/GPL-2.0+"
description = """
Idiomatic Rust wrapper for MbedTLS, allowing you to use MbedTLS with only safe
code while being able to use such great Rust features like error handling and
closures.

Building on MbedTLS's focus on embedded use, this crate can be used in a no_std
environment."""
readme = "../README.md"
repository = "https://github.com/fortanix/rust-mbedtls"
documentation = "https://docs.rs/mbedtls/"
keywords = ["MbedTLS","mbed","TLS","SSL","cryptography"]

[dependencies]
core_io = { version = "0.1", features = ["collections"], optional = true }
spin = { version = "0.5.2", default-features = false, optional = true }
mbedtls-sys = { git = "https://github.com/rust-mbedtls/mbedtls-sys" }
serde = { version = "1.0.101", default-features = false }
yasna = { version = "0.3.1", optional = true }
serde_derive = "1.0.101"
byteorder = "1.3.2"
bitflags = "1.1.0"
chrono = "0.4.9"

[dev-dependencies]
rand_xorshift = "0.2.0"
serde_cbor = "0.10.1"
libc = "0.2.62"
rand = "0.7.2"
hex = "0.3"

[features]
# Features are documented in the README
default = ["std"]
std = ["serde/std"]
threading = []
pthread = ["threading","std"]
spin_threading = ["threading","spin"]
sgx = ["std", "rust_threading", "rdrand"]
rust_threading = ["threading", "std"]
rdrand = []
pkcs12 = ["yasna"]
kw = []
self_test = []

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["std"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["std"]

[[test]]
name = "client_server"
path = "tests/client_server.rs"
required-features = ["std"]

[[test]]
name = "ec"
path = "tests/ec.rs"

[[test]]
name = "pbkdf"
path = "tests/pbkdf.rs"

[[test]]
name = "mbedtls_self_tests"
path = "tests/mbedtls_self_tests.rs"
required-features = ["self_test"]

[[test]]
name = "bignum"
path = "tests/bignum.rs"

[[test]]
name = "rsa"
path = "tests/rsa.rs"

[[test]]
name = "save_restore"
path = "tests/save_restore.rs"

[[test]]
name = "ssl_conf_verify"
path = "tests/ssl_conf_verify.rs"
required-features = ["std"]
